(lang dune 3.17)
(name wkbl)
(version 0.5.1)

(generate_opam_files true)

(source (github yousleepwhen/wkbl))
(authors "Vincent")
(maintainers "Vincent")
(license MIT)

(package
 (name wkbl)
 (synopsis "WKBL Analytics - Korean Women's Basketball Stats")
 (description "Web application for analyzing WKBL player and team statistics using Kirin framework")
 (depends
  (ocaml (>= 5.1))
  (dune (>= 3.17))
  (kirin (>= 0.4.1))
  (caqti (>= 2.1))
  (caqti-driver-sqlite3 (>= 2.1))
  (caqti-driver-postgresql (>= 2.1))
  (caqti-eio (>= 2.1))
  (eio (>= 1.0))
  (eio_main (>= 1.0))
  (yojson (>= 2.1))
  (ppx_deriving (>= 5.2))
  (ppx_deriving_yojson (>= 3.7))
  (cohttp-eio (>= 6.0))
  (lambdasoup (>= 1.0))
  (graphql (>= 0.14))
  (graphql_parser (>= 0.14))
  (wasm_of_ocaml-compiler (>= 6.3))
  (alcotest (>= 1.7.0))
  (bisect_ppx
   (and
    (>= 2.8)
    :with-dev-setup))))
