(lang dune 3.17)
(name wkbl)
(version 0.6.0)

(generate_opam_files true)

(source (github yousleepwhen/wkbl))
(authors "Vincent")
(maintainers "Vincent")
(license MIT)

(package
 (name wkbl)
 (synopsis "WKBL Analytics - Korean Women's Basketball Stats")
 (description "Web application for analyzing WKBL player and team statistics using Kirin framework")
 (depends
  (ocaml (>= 5.1))
  (dune (>= 3.17))
  (kirin (>= 0.7.0))
  (caqti (and (>= 2.2) (< 3.0)))
  (caqti-driver-sqlite3 (and (>= 2.2) (< 3.0)))
  (caqti-driver-postgresql (and (>= 2.2) (< 3.0)))
  (caqti-eio (and (>= 2.2) (< 3.0)))
  (eio (and (>= 1.3) (< 2.0)))
  (eio_main (and (>= 1.3) (< 2.0)))
  (yojson (and (>= 3.0) (< 4.0)))
  (ppx_deriving (and (>= 6.0) (< 7.0)))
  (ppx_deriving_yojson (and (>= 3.10) (< 4.0)))
  (cohttp-eio (and (>= 6.0) (< 7.0)))
  (lambdasoup (and (>= 1.1) (< 2.0)))
  (graphql (and (>= 0.14) (< 0.15)))
  (graphql_parser (and (>= 0.14) (< 0.15)))
  (js_of_ocaml (and (>= 6.0) (< 7.0)))
  (js_of_ocaml-ppx (and (>= 6.0) (< 7.0)))
  (wasm_of_ocaml-compiler (and (>= 6.0) (< 7.0)))
  (alcotest (and (>= 1.9) (< 2.0)))
  (bisect_ppx
   (and
    (>= 2.8)
    :with-dev-setup))))
