(library
 (name wkbl)
 (public_name wkbl)
 (libraries kirin caqti caqti-driver-sqlite3 caqti-driver-postgresql caqti-eio caqti-eio.unix eio eio_main yojson unix cohttp-eio tls-eio ca-certs mirage-crypto-rng-eio lambdasoup str graphql graphql_parser)
 (modules admin ai backfill canonical_host cards clutch db db_cache db_common db_pool db_queries db_queries_awards db_queries_core db_queries_qa db_queries_schema db_queries_seeds db_queries_stats db_repo db_request db_types domain domain_core domain_game_flow domain_mvp_fantasy domain_play_analysis domain_prediction domain_splits domain_streaks form_urlencoded graphql_schema html_dsl i18n live player_identity prediction qa request_params route_helpers routes_api routes_compare routes_game routes_history routes_home routes_player routes_predict routes_qa routes_static routes_stats routes_team seasons_catalog scraper db_sync stats streaks views views_awards views_charts views_cards views_clutch views_common views_compare views_components views_games views_home views_history views_leaders views_live views_mvp views_player views_players views_predict views_season views_standings views_streaks views_team views_tools wkbl)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson))
 (instrumentation (backend bisect_ppx)))
