(test
 (name test_main)
 (libraries alcotest fmt wkbl))

(test
 (name test_html_dsl)
 (libraries alcotest wkbl))

(test
 (name test_island_core)
 (libraries alcotest fmt wkbl_island_core))

(test
 (name no_shell_cards_test)
 (libraries unix)
 (deps ../lib/cards.ml)
 (action
  (run %{exe:no_shell_cards_test.exe} %{dep:../lib/cards.ml})))
